# realtime

./: readme.md
demos/model_training_viewer/: .gitignore  Makefile
demos/model_training_viewer/script/: get_data.py  run_listener.sh  run_model_train.sh
demos/model_training_viewer/src/: rs
demos/model_training_viewer/src/js/: package-lock.json  package.json  tsconfig.json  webpack.config.js
demos/model_training_viewer/src/js/src/: constants.ts  index.html  index.js  index.ts
demos/model_training_viewer/src/py/model/: train.py
src/cpp/: CMakeLists.txt  vcpkg.json
src/cpp/include/: Session.h  SessionManager.h
src/cpp/src/: CMakeLists.txt  Session.cpp  SessionManager.cpp
src/py/: requirements.txt
src/py/realtime/: __init__.py
src/rs/receiver/: Cargo.toml
src/rs/receiver/src/: lib.rs
src/rs/receiver/static/: index.html
