[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["BinaryType", "Window", "WebSocket", "MessageEvent", "console"] }
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
crc32fast = "1.3.2"

[lib]
crate-type = ["cdylib"]